# ComfyUI-Sharp

./: .gitignore  README.md  __init__.py  comfy-env-root.toml  comfy-test.toml  index.html  prestartup_script.py  pyproject.toml  requirements.txt
.github/workflows/: pr-gate.yml  publish.yml  run-tests.yml  test.yml
dev/: index.html
dev/linux-cpu/: index.html  models.json  results.json
dev/linux-cpu/logs/: sharp_basic_resources.csv  sharp_exif_resources.csv
dev/linux-gpu/: index.html  results.json
dev/linux-gpu/logs/: sharp_exif_resources.csv
dev/macos-cpu/: index.html  results.json
dev/macos-cpu/logs/: sharp_basic_resources.csv  sharp_exif_resources.csv
dev/windows-cpu/: index.html  models.json  results.json
dev/windows-cpu/logs/: sharp_basic_resources.csv  sharp_exif_resources.csv
dev/windows-portable-cpu/: index.html  results.json
dev/windows-portable-cpu/logs/: sharp_basic_resources.csv  sharp_exif_resources.csv
main/linux-cpu/: index.html  results.json
main/linux-cpu/logs/: sharp_basic_resources.csv  sharp_exif_resources.csv
main/linux-gpu/: models.json
main/linux-gpu/logs/: pano_resources.csv  sharp_basic_resources.csv
main/macos-cpu/: index.html  models.json  results.json
main/macos-cpu/logs/: sharp_basic_resources.csv  sharp_exif_resources.csv
main/windows-cpu/: index.html  models.json  results.json
main/windows-cpu/logs/: sharp_basic_resources.csv  sharp_exif_resources.csv
main/windows-gpu/: index.html  models.json  results.json
main/windows-gpu/logs/: pano_resources.csv  sharp_basic_resources.csv  sharp_exif_resources.csv
main/windows-portable-cpu/: index.html  models.json  results.json
main/windows-portable-cpu/logs/: sharp_basic_resources.csv  sharp_exif_resources.csv
main/windows-portable-gpu/: index.html  models.json  results.json
main/windows-portable-gpu/logs/: pano_resources.csv  sharp_basic_resources.csv  sharp_exif_resources.csv
nodes/: __init__.py  adjust_colors.py  align_depth_maps.py  comfy-env.toml  filter_gaussians.py  load_image_exif.py  load_model.py  merge_gaussians.py  predict.py  predict_depth.py  project_depth_to_panorama.py  sample_panorama.py
nodes/sharp/: __init__.py  gaussians.py  linalg.py  model.py
nodes/sharp/cli/: predict.py  render.py
nodes/sharp/models/: __init__.py  alignment.py  (+5 more)
sharp/models/: predictor.py
sharp/utils/: gaussians.py
workflows/: sharp_basic.json
(+36 files in other folders)
